Configured SIRIUS to output api docs either with enumsAsRef or enumsAsString. Either all strings or all enums. Renamed some inner class enums to more descriptive names in the api.